--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.3",
+    "nanoid": "^5.1.5",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
